# product-serving-booksby

./: README.md
.github/workflows/: python-app-model.yml  python-app.yml
back-end/: app.py  inference.py  make_data.py  pyproject.toml  train.py  utils.py
back-end/config/: config.yaml
crawler/: amazon_crawler.ipynb  amazon_crawler_only_img.ipynb  auto_API_crawler.ipynb
front-end/: asset-manifest.json  index.html  package.json
front-end/static/css/: main.3ec72b7e.css  main.3ec72b7e.css.map
front-end/static/js/: 787.cd01d6b5.chunk.js  787.cd01d6b5.chunk.js.map  main.32492b40.js  main.32492b40.js.LICENSE.txt  main.32492b40.js.map  main.57afeff5.js  main.57afeff5.js.map
model/: README.md  bert_pytorch.ipynb
model/RecBole/: inference.py  make_data.py  train.py
model/RecBole/config/: common.yaml  common_cpu.yaml
